Bug 160836 - unable to resize table row height with mouse, if contains an image which cropped by the fixed row height
Summary: unable to resize table row height with mouse, if contains an image which crop...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords:
Depends on:
Blocks: Writer-Tables Cell-Management Authors
  Show dependency treegraph
 
Reported: 2024-04-26 19:19 UTC by László Németh
Modified: 2024-06-03 19:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document (floating table with an image cropped by the fixed row height) (8.07 KB, application/vnd.oasis.opendocument.text-flat-xml)
2024-04-26 19:20 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-04-26 19:19:18 UTC
Description:
Fixed row height can crop cell content, including images anchored as character. Resizing the row height with mouse is not possible there, because the cropped image avoids to select the horizontal border.

Steps to Reproduce:
1. open the attached document with a floating table.
2. Try to resize the bottom border of the first cell (containing an image cropped by the fixed row height) with the mouse.

Actual Results:
It's not possible: the pointer doesn't change to double arrow indicating the selectable cell border, also it's not possible to drag the border.

Expected Results:
Possible to drag & drop the bottom border with the mouse, resizing row height.


Reproducible: Always


User Profile Reset: No

Additional Info:
Possible workaround:

1. select the table row with the mouse by clicking in front of the cell, and modify Size->Row Height in the context menu.
Comment 1 László Németh 2024-04-26 19:20:05 UTC
Created attachment 193871 [details]
test document (floating table with an image cropped by the fixed row height)
Comment 2 Commit Notification 2024-04-28 22:17:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30de13743f144aced83bc43d310592f82788c910

tdf#160836 sw: resize rows at images cropped by row height

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-04-30 21:02:36 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/38b6e89c9483fdfe3d26bef3b25f890528aef84e

tdf#160836 sw: fix narrow selection area of cell border

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-05-14 09:04:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/03d40ad9dea1629f55a1270d425a5995ed229ddb

tdf#160836 sw: resize rows at images cropped by row height

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-05-14 09:06:18 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/95fdda2f027f2bcdd135b3f55c549d6f2339e086

tdf#160836 sw: fix narrow selection area of cell border

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2024-06-03 19:54:13 UTC
This fixes also the missing (hovered) cell border of https://bugs.documentfoundation.org/attachment.cgi?id=193871 (tdf#160836 test document).