tdf#160836 sw: resize rows at images cropped by row height

Fixed row height can crop cell content, including images
anchored as character. Resizing the row height with mouse
was not possible there, because selection of the cropped
image avoided to drag & drop the horizontal cell border.

Change-Id: I6dde79e77563468059794548b6c058cad61586a0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166795
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins
(cherry picked from commit 30de13743f144aced83bc43d310592f82788c910)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167210
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>